sys/src/linux/aarch64.rs

pub const LV2_RESIZE_PORT__minimumSize: &'static [u8; 49usize] =
    b"http://lv2plug.in/ns/ext/resize-port#minimumSize\0";
pub const LV2_RESIZE_PORT__resize: &'static [u8; 44usize] =
    b"http://lv2plug.in/ns/ext/resize-port#resize\0";
pub const LV2_STATE_URI: &'static [u8; 31usize] = b"http://lv2plug.in/ns/ext/state\0";
pub const LV2_STATE_PREFIX: &'static [u8; 32usize] = b"http://lv2plug.in/ns/ext/state#\0";
pub const LV2_STATE__State: &'static [u8; 37usize] = b"http://lv2plug.in/ns/ext/state#State\0";
pub const LV2_STATE__interface: &'static [u8; 41usize] =
    b"http://lv2plug.in/ns/ext/state#interface\0";
pub const LV2_STATE__loadDefaultState: &'static [u8; 48usize] =
    b"http://lv2plug.in/ns/ext/state#loadDefaultState\0";
pub const LV2_STATE__freePath: &'static [u8; 40usize] =
    b"http://lv2plug.in/ns/ext/state#freePath\0";
pub const LV2_STATE__makePath: &'static [u8; 40usize] =
    b"http://lv2plug.in/ns/ext/state#makePath\0";
pub const LV2_STATE__mapPath: &'static [u8; 39usize] = b"http://lv2plug.in/ns/ext/state#mapPath\0";
pub const LV2_STATE__state: &'static [u8; 37usize] = b"http://lv2plug.in/ns/ext/state#state\0";
pub const LV2_STATE__threadSafeRestore: &'static [u8; 49usize] =
    b"http://lv2plug.in/ns/ext/state#threadSafeRestore\0";
pub const LV2_STATE__StateChanged: &'static [u8; 44usize] =
    b"http://lv2plug.in/ns/ext/state#StateChanged\0";
pub const LV2_TIME_URI: &'static [u8; 30usize] = b"http://lv2plug.in/ns/ext/time\0";
pub const LV2_TIME_PREFIX: &'static [u8; 31usize] = b"http://lv2plug.in/ns/ext/time#\0";
pub const LV2_TIME__Time: &'static [u8; 35usize] = b"http://lv2plug.in/ns/ext/time#Time\0";
pub const LV2_TIME__Position: &'static [u8; 39usize] = b"http://lv2plug.in/ns/ext/time#Position\0";
pub const LV2_TIME__Rate: &'static [u8; 35usize] = b"http://lv2plug.in/ns/ext/time#Rate\0";
pub const LV2_TIME__position: &'static [u8; 39usize] = b"http://lv2plug.in/ns/ext/time#position\0";
pub const LV2_TIME__barBeat: &'static [u8; 38usize] = b"http://lv2plug.in/ns/ext/time#barBeat\0";
pub const LV2_TIME__bar: &'static [u8; 34usize] = b"http://lv2plug.in/ns/ext/time#bar\0";
pub const LV2_TIME__beat: &'static [u8; 35usize] = b"http://lv2plug.in/ns/ext/time#beat\0";
pub const LV2_TIME__beatUnit: &'static [u8; 39usize] = b"http://lv2plug.in/ns/ext/time#beatUnit\0";
pub const LV2_TIME__beatsPerBar: &'static [u8; 42usize] =
    b"http://lv2plug.in/ns/ext/time#beatsPerBar\0";
pub const LV2_TIME__beatsPerMinute: &'static [u8; 45usize] =
    b"http://lv2plug.in/ns/ext/time#beatsPerMinute\0";
pub const LV2_TIME__frame: &'static [u8; 36usize] = b"http://lv2plug.in/ns/ext/time#frame\0";
pub const LV2_TIME__framesPerSecond: &'static [u8; 46usize] =
    b"http://lv2plug.in/ns/ext/time#framesPerSecond\0";
pub const LV2_TIME__speed: &'static [u8; 36usize] = b"http://lv2plug.in/ns/ext/time#speed\0";
pub const LV2_UI_URI: &'static [u8; 35usize] = b"http://lv2plug.in/ns/extensions/ui\0";
pub const LV2_UI_PREFIX: &'static [u8; 36usize] = b"http://lv2plug.in/ns/extensions/ui#\0";
pub const LV2_UI__CocoaUI: &'static [u8; 43usize] = b"http://lv2plug.in/ns/extensions/ui#CocoaUI\0";
pub const LV2_UI__Gtk3UI: &'static [u8; 42usize] = b"http://lv2plug.in/ns/extensions/ui#Gtk3UI\0";
pub const LV2_UI__GtkUI: &'static [u8; 41usize] = b"http://lv2plug.in/ns/extensions/ui#GtkUI\0";
pub const LV2_UI__PortNotification: &'static [u8; 52usize] =
    b"http://lv2plug.in/ns/extensions/ui#PortNotification\0";
pub const LV2_UI__PortProtocol: &'static [u8; 48usize] =
    b"http://lv2plug.in/ns/extensions/ui#PortProtocol\0";
pub const LV2_UI__Qt4UI: &'static [u8; 41usize] = b"http://lv2plug.in/ns/extensions/ui#Qt4UI\0";
pub const LV2_UI__Qt5UI: &'static [u8; 41usize] = b"http://lv2plug.in/ns/extensions/ui#Qt5UI\0";
pub const LV2_UI__UI: &'static [u8; 38usize] = b"http://lv2plug.in/ns/extensions/ui#UI\0";
pub const LV2_UI__WindowsUI: &'static [u8; 45usize] =
    b"http://lv2plug.in/ns/extensions/ui#WindowsUI\0";
pub const LV2_UI__X11UI: &'static [u8; 41usize] = b"http://lv2plug.in/ns/extensions/ui#X11UI\0";
pub const LV2_UI__binary: &'static [u8; 42usize] = b"http://lv2plug.in/ns/extensions/ui#binary\0";
pub const LV2_UI__fixedSize: &'static [u8; 45usize] =
    b"http://lv2plug.in/ns/extensions/ui#fixedSize\0";
pub const LV2_UI__idleInterface: &'static [u8; 49usize] =
    b"http://lv2plug.in/ns/extensions/ui#idleInterface\0";
pub const LV2_UI__noUserResize: &'static [u8; 48usize] =
    b"http://lv2plug.in/ns/extensions/ui#noUserResize\0";
pub const LV2_UI__notifyType: &'static [u8; 46usize] =
    b"http://lv2plug.in/ns/extensions/ui#notifyType\0";
pub const LV2_UI__parent: &'static [u8; 42usize] = b"http://lv2plug.in/ns/extensions/ui#parent\0";
pub const LV2_UI__plugin: &'static [u8; 42usize] = b"http://lv2plug.in/ns/extensions/ui#plugin\0";
pub const LV2_UI__portIndex: &'static [u8; 45usize] =
    b"http://lv2plug.in/ns/extensions/ui#portIndex\0";
pub const LV2_UI__portMap: &'static [u8; 43usize] = b"http://lv2plug.in/ns/extensions/ui#portMap\0";
pub const LV2_UI__portNotification: &'static [u8; 52usize] =
    b"http://lv2plug.in/ns/extensions/ui#portNotification\0";
pub const LV2_UI__portSubscribe: &'static [u8; 49usize] =
    b"http://lv2plug.in/ns/extensions/ui#portSubscribe\0";
pub const LV2_UI__protocol: &'static [u8; 44usize] =
    b"http://lv2plug.in/ns/extensions/ui#protocol\0";
pub const LV2_UI__requestValue: &'static [u8; 48usize] =
    b"http://lv2plug.in/ns/extensions/ui#requestValue\0";
pub const LV2_UI__floatProtocol: &'static [u8; 49usize] =
    b"http://lv2plug.in/ns/extensions/ui#floatProtocol\0";
pub const LV2_UI__peakProtocol: &'static [u8; 48usize] =
    b"http://lv2plug.in/ns/extensions/ui#peakProtocol\0";
pub const LV2_UI__resize: &'static [u8; 42usize] = b"http://lv2plug.in/ns/extensions/ui#resize\0";
pub const LV2_UI__showInterface: &'static [u8; 49usize] =
    b"http://lv2plug.in/ns/extensions/ui#showInterface\0";
pub const LV2_UI__touch: &'static [u8; 41usize] = b"http://lv2plug.in/ns/extensions/ui#touch\0";
pub const LV2_UI__ui: &'static [u8; 38usize] = b"http://lv2plug.in/ns/extensions/ui#ui\0";
pub const LV2_UI__updateRate: &'static [u8; 46usize] =
    b"http://lv2plug.in/ns/extensions/ui#updateRate\0";
pub const LV2_UI__windowTitle: &'static [u8; 47usize] =
    b"http://lv2plug.in/ns/extensions/ui#windowTitle\0";
pub const LV2_UI__scaleFactor: &'static [u8; 47usize] =
    b"http://lv2plug.in/ns/extensions/ui#scaleFactor\0";
pub const LV2_UI__foregroundColor: &'static [u8; 51usize] =
    b"http://lv2plug.in/ns/extensions/ui#foregroundColor\0";
pub const LV2_UI__backgroundColor: &'static [u8; 51usize] =
    b"http://lv2plug.in/ns/extensions/ui#backgroundColor\0";
pub const LV2_UNITS_URI: &'static [u8; 38usize] = b"http://lv2plug.in/ns/extensions/units\0";
pub const LV2_UNITS_PREFIX: &'static [u8; 39usize] = b"http://lv2plug.in/ns/extensions/units#\0";
pub const LV2_UNITS__Conversion: &'static [u8; 49usize] =
    b"http://lv2plug.in/ns/extensions/units#Conversion\0";
pub const LV2_UNITS__Unit: &'static [u8; 43usize] = b"http://lv2plug.in/ns/extensions/units#Unit\0";
pub const LV2_UNITS__bar: &'static [u8; 42usize] = b"http://lv2plug.in/ns/extensions/units#bar\0";
pub const LV2_UNITS__beat: &'static [u8; 43usize] = b"http://lv2plug.in/ns/extensions/units#beat\0";
pub const LV2_UNITS__bpm: &'static [u8; 42usize] = b"http://lv2plug.in/ns/extensions/units#bpm\0";
pub const LV2_UNITS__cent: &'static [u8; 43usize] = b"http://lv2plug.in/ns/extensions/units#cent\0";
pub const LV2_UNITS__cm: &'static [u8; 41usize] = b"http://lv2plug.in/ns/extensions/units#cm\0";
pub const LV2_UNITS__coef: &'static [u8; 43usize] = b"http://lv2plug.in/ns/extensions/units#coef\0";
pub const LV2_UNITS__conversion: &'static [u8; 49usize] =
    b"http://lv2plug.in/ns/extensions/units#conversion\0";
pub const LV2_UNITS__db: &'static [u8; 41usize] = b"http://lv2plug.in/ns/extensions/units#db\0";
pub const LV2_UNITS__degree: &'static [u8; 45usize] =
    b"http://lv2plug.in/ns/extensions/units#degree\0";
pub const LV2_UNITS__frame: &'static [u8; 44usize] =
    b"http://lv2plug.in/ns/extensions/units#frame\0";
pub const LV2_UNITS__hz: &'static [u8; 41usize] = b"http://lv2plug.in/ns/extensions/units#hz\0";
pub const LV2_UNITS__inch: &'static [u8; 43usize] = b"http://lv2plug.in/ns/extensions/units#inch\0";
pub const LV2_UNITS__khz: &'static [u8; 42usize] = b"http://lv2plug.in/ns/extensions/units#khz\0";
pub const LV2_UNITS__km: &'static [u8; 41usize] = b"http://lv2plug.in/ns/extensions/units#km\0";
pub const LV2_UNITS__m: &'static [u8; 40usize] = b"http://lv2plug.in/ns/extensions/units#m\0";
pub const LV2_UNITS__mhz: &'static [u8; 42usize] = b"http://lv2plug.in/ns/extensions/units#mhz\0";
pub const LV2_UNITS__midiNote: &'static [u8; 47usize] =
    b"http://lv2plug.in/ns/extensions/units#midiNote\0";
pub const LV2_UNITS__mile: &'static [u8; 43usize] = b"http://lv2plug.in/ns/extensions/units#mile\0";
pub const LV2_UNITS__min: &'static [u8; 42usize] = b"http://lv2plug.in/ns/extensions/units#min\0";
pub const LV2_UNITS__mm: &'static [u8; 41usize] = b"http://lv2plug.in/ns/extensions/units#mm\0";
pub const LV2_UNITS__ms: &'static [u8; 41usize] = b"http://lv2plug.in/ns/extensions/units#ms\0";
pub const LV2_UNITS__name: &'static [u8; 43usize] = b"http://lv2plug.in/ns/extensions/units#name\0";
pub const LV2_UNITS__oct: &'static [u8; 42usize] = b"http://lv2plug.in/ns/extensions/units#oct\0";
pub const LV2_UNITS__pc: &'static [u8; 41usize] = b"http://lv2plug.in/ns/extensions/units#pc\0";
pub const LV2_UNITS__prefixConversion: &'static [u8; 55usize] =
    b"http://lv2plug.in/ns/extensions/units#prefixConversion\0";
pub const LV2_UNITS__render: &'static [u8; 45usize] =
    b"http://lv2plug.in/ns/extensions/units#render\0";
pub const LV2_UNITS__s: &'static [u8; 40usize] = b"http://lv2plug.in/ns/extensions/units#s\0";
pub const LV2_UNITS__semitone12TET: &'static [u8; 52usize] =
    b"http://lv2plug.in/ns/extensions/units#semitone12TET\0";
pub const LV2_UNITS__symbol: &'static [u8; 45usize] =
    b"http://lv2plug.in/ns/extensions/units#symbol\0";
pub const LV2_UNITS__unit: &'static [u8; 43usize] = b"http://lv2plug.in/ns/extensions/units#unit\0";
pub const LV2_URI_MAP_URI: &'static [u8; 33usize] = b"http://lv2plug.in/ns/ext/uri-map\0";
pub const LV2_URI_MAP_PREFIX: &'static [u8; 34usize] = b"http://lv2plug.in/ns/ext/uri-map#\0";
pub const LV2_WORKER_URI: &'static [u8; 32usize] = b"http://lv2plug.in/ns/ext/worker\0";
pub const LV2_WORKER_PREFIX: &'static [u8; 33usize] = b"http://lv2plug.in/ns/ext/worker#\0";
pub const LV2_WORKER__interface: &'static [u8; 42usize] =
    b"http://lv2plug.in/ns/ext/worker#interface\0";
pub const LV2_WORKER__schedule: &'static [u8; 41usize] =
    b"http://lv2plug.in/ns/ext/worker#schedule\0";
pub type __uint8_t = ::std::os::raw::c_uchar;
pub type __uint16_t = ::std::os::raw::c_ushort;
pub type __int32_t = ::std::os::raw::c_int;
pub type __uint32_t = ::std::os::raw::c_uint;
pub type __int64_t = ::std::os::raw::c_long;
#[doc = " The header of an atom:Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom {
    #[doc = "< Size in bytes, not including type and size."]
    pub size: u32,
    #[doc = "< Type of this atom (mapped URI)."]
    pub type_: u32,
}
#[doc = " An atom:Int or atom:Bool.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Int {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Integer value."]
    pub body: i32,
}
#[doc = " An atom:Long.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Long {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Integer value."]
    pub body: i64,
}
#[doc = " An atom:Float.  May be cast to LV2_Atom."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_Atom_Float {
    #[doc = "< Atom header."]
    pub atom: LV2_Atom,
    #[doc = "< Floating point value."]
    pub body: f32,
}
